Fix name column: remove min-width forcing table stretch

--- a/style.css
+++ b/style.css
@@ -151,7 +151,6 @@ body {
   border-collapse: separate;
   border-spacing: 1px;
   width: max-content;
-  min-width: 100%;
 }
 
 #grid-table thead {
